--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,18 @@ html, body, p {
   color: $main-text-color;
 }
 
+.apartment {
+  color: #a72da3;
+}
+
+.condo {
+  color: #d68000;
+}
+
+.house {
+  color: #6f1818;
+}
+
 // #rentalListing {
 //   .title {
 //     font-size: 30px;
